Poboljsanje API po RM modelu
